courses/430_programming-languages/assignment-4/tests/error/error27.sml
val prog = PROGRAM {decls=["a","b","c","a"],stmts=[ST_PRINT {exp=EXP_ID "a"}]}
  : program
;
